# howdyctl

./: Cargo.toml  LICENSE-MIT  README.md  TODO.md  demo.tape  install.sh
.github/workflows/: ci.yml
crates/howdy/: Cargo.toml
crates/howdy/src/: camera.rs  config.rs  doctor.rs  fix.rs  ioctl.rs  lib.rs  model.rs  test.rs
crates/howdyctl/: Cargo.toml
crates/howdyctl/src/: app.rs  banner.txt  elevate.rs  main.rs  ui.rs
